# iceberg-db

iceberg-db-rs/: .gitignore  Cargo.toml  LICENSE  README.md  build-native.ps1
iceberg-db-rs/.cargo/: config.toml
iceberg-db-rs/config/: local-hadoop.yaml  snowflake-horizon.example.yaml  snowflake-horizon.wasm.example.yaml
iceberg-db-rs/crates/idb-bench/: Cargo.toml  README.md
iceberg-db-rs/crates/idb-bench/src/: main.rs
iceberg-db-rs/crates/idb-catalog/: Cargo.toml
iceberg-db-rs/crates/idb-catalog/src/: demo_memory.rs  hadoop.rs  http_log.rs  lib.rs  resolved_paths.rs  rest_types.rs  rest_vended.rs  snowflake_auth.rs  wasm_local.rs  wasm_s3_storage.rs
iceberg-db-rs/crates/idb-cli/: Cargo.toml
iceberg-db-rs/crates/idb-cli/src/: main.rs
iceberg-db-rs/crates/idb-config/: Cargo.toml
iceberg-db-rs/crates/idb-config/src/: lib.rs  profile.rs
iceberg-db-rs/crates/idb-core/: Cargo.toml
iceberg-db-rs/crates/idb-core/src/: lib.rs
iceberg-db-rs/crates/idb-sf-proxy/: Cargo.toml
iceberg-db-rs/crates/idb-sf-proxy/src/: main.rs
iceberg-db-rs/crates/idb-sql/: Cargo.toml
iceberg-db-rs/crates/idb-sql/src/: case_insensitive.rs  lib.rs  wasm_demo.rs  wasm_lazy_catalog.rs
iceberg-db-rs/crates/idb-wasm/: Cargo.toml  build.rs
iceberg-db-rs/crates/idb-wasm/src/: lib.rs
iceberg-db-rs/patches/iceberg-0.9.1/: .cargo_vcs_info.json  Cargo.toml
iceberg-db-rs/patches/iceberg-0.9.1/src/io/: object_cache.rs
iceberg-db-rs/patches/iceberg-0.9.1/src/runtime/: mod.rs
iceberg-db-rs/patches/iceberg-overlay/: object_cache.rs
iceberg-db-rs/scripts/: _resolve-snowflake-pat.ps1  _run-push.ps1  _stop-sf-proxy.ps1  fix-git-remove-wasm-dist.ps1  install-local-config.ps1  push-now.ps1  push-to-github.ps1  start-sf-proxy.ps1  test-horizon.ps1  test-oauth-via-proxy.ps1  test-oauth-via-trunk.ps1  test-oauth-with-origin.ps1  vendor-iceberg-patch.ps1
iceberg-db-rs/web-wasm/: README.md  Trunk.toml  app.js  index.html  serve.ps1  snowflake-proxy.mjs  snowflake-proxy.ps1  snowsight.css
