[workspace]
resolver = "2"
members = [
  "crates/idb-config",
  "crates/idb-catalog",
  "crates/idb-sql",
  "crates/idb-core",
  "crates/idb-cli",
  "crates/idb-bench",
  "crates/idb-wasm",
  "crates/idb-sf-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
datafusion = "52"
futures = "0.3"
iceberg = "0.9.1"
iceberg-catalog-rest = "0.9.0"
iceberg-datafusion = "0.9.1"
iceberg-storage-opendal = "0.9.1"
object_store = { version = "0.12", default-features = false, features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

idb-config = { path = "crates/idb-config" }
idb-catalog = { path = "crates/idb-catalog", default-features = false }
idb-sql = { path = "crates/idb-sql" }
idb-core = { path = "crates/idb-core" }

# Requires patches/iceberg-0.9.1 (run web-wasm\serve.ps1 or scripts\vendor-iceberg-patch.ps1 once)
[patch.crates-io]
iceberg = { path = "patches/iceberg-0.9.1" }
