[package]
name = "idb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "idb-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
idb-config.workspace = true
idb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
