[package]
name = "idb-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = [
  "dep:iceberg-catalog-rest",
  "dep:iceberg-storage-opendal",
  "dep:idb-config",
  "dep:reqwest",
  "dep:serde_json",
]

[dependencies]
anyhow.workspace = true
arrow-array = "57.1"
arrow-schema = "57.1"
async-trait = "0.1"
bytes = "1"
iceberg.workspace = true
iceberg-catalog-rest = { workspace = true, optional = true }
iceberg-storage-opendal = { workspace = true, optional = true }
idb-config = { workspace = true, optional = true }
parquet = "57.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
typetag = "0.2"
tracing.workspace = true
