[package]
name = "idb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "idb"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
datafusion.workspace = true
idb-config.workspace = true
idb-core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
