[package]
name = "idb-sf-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local dev reverse proxy for Snowflake Horizon (avoids browser CORS)"

[[bin]]
name = "idb-sf-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
reqsign = { version = "0.16.5", default-features = false, features = [
  "reqwest_request",
  "reqwest_blocking_request",
  "rustls",
  "services-aws",
] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
urlencoding = "2"
