[package]
name = "idb-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
native = ["idb-catalog/native"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
futures.workspace = true
iceberg.workspace = true
iceberg-datafusion.workspace = true
idb-catalog = { workspace = true, default-features = false }
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
web-time = "1"
wasm-bindgen-futures = "0.4"
datafusion = { version = "52", default-features = false, features = [
    "parquet",
    "nested_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
    "sql",
] }
tokio = { workspace = true, default-features = false, features = ["macros", "rt", "sync", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
datafusion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
